cmake_minimum_required(VERSION 3.8)

# PROJECT DEFINITION
project(pbrt)

# APPEND TO MODULE PATH TO FIND EXTRA CMAKE FILES
list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}" ${CMAKE_MODULE_PATH})

# FIND REQUIRED PACKAGES
FIND_PACKAGE ( Sanitizers )
FIND_PACKAGE ( Threads )

# TUNE COMPILES BASED ON TYPE
IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-conversion-null")
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-register")
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

  FIND_PROGRAM(XIAR xiar)
  IF(XIAR)
    SET(CMAKE_AR "${XIAR}")
  ENDIF(XIAR)
  MARK_AS_ADVANCED(XIAR)

  FIND_PROGRAM(XILD xild)
  IF(XILD)
    SET(CMAKE_LINKER "${XILD}")
  ENDIF(XILD)
  MARK_AS_ADVANCED(XILD)

  # ICC will default to -fp-model fast=1, which performs value-unsafe optimizations which will
  # cause pbrt_test to fail. For safety, -fp-model precise is explicitly set here by default.
  set(FP_MODEL "precise" CACHE STRING "The floating point model to compile with.")
  set_property(CACHE FP_MODEL PROPERTY STRINGS "precise" "fast=1" "fast=2")

  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fp-model ${FP_MODEL}")
ENDIF()

# PBRT LIBRARY FILES
# HEADERS
list(APPEND PBRT_HEADERS src/accelerators/bvh.h)
list(APPEND PBRT_HEADERS src/accelerators/kdtreeaccel.h)
list(APPEND PBRT_HEADERS src/cameras/environment.h)
list(APPEND PBRT_HEADERS src/cameras/orthographic.h)
list(APPEND PBRT_HEADERS src/cameras/perspective.h)
list(APPEND PBRT_HEADERS src/cameras/realistic.h)
list(APPEND PBRT_HEADERS src/core/api.h)
list(APPEND PBRT_HEADERS src/core/bssrdf.h)
list(APPEND PBRT_HEADERS src/core/camera.h)
list(APPEND PBRT_HEADERS src/core/efloat.h)
list(APPEND PBRT_HEADERS src/core/error.h)
list(APPEND PBRT_HEADERS src/core/fileutil.h)
list(APPEND PBRT_HEADERS src/core/film.h)
list(APPEND PBRT_HEADERS src/core/filter.h)
list(APPEND PBRT_HEADERS src/core/floatfile.h)
list(APPEND PBRT_HEADERS src/core/geometry.h)
list(APPEND PBRT_HEADERS src/core/integrator.h)
list(APPEND PBRT_HEADERS src/core/interaction.h)
list(APPEND PBRT_HEADERS src/core/interpolation.h)
list(APPEND PBRT_HEADERS src/core/light.h)
list(APPEND PBRT_HEADERS src/core/lightdistrib.h)
list(APPEND PBRT_HEADERS src/core/lowdiscrepancy.h)
list(APPEND PBRT_HEADERS src/core/material.h)
list(APPEND PBRT_HEADERS src/core/medium.h)
list(APPEND PBRT_HEADERS src/core/memory.h)
list(APPEND PBRT_HEADERS src/core/microfacet.h)
list(APPEND PBRT_HEADERS src/core/mipmap.h)
list(APPEND PBRT_HEADERS src/core/parallel.h)
list(APPEND PBRT_HEADERS src/core/paramset.h)
list(APPEND PBRT_HEADERS src/core/parser.h)
list(APPEND PBRT_HEADERS src/core/pbrt.h)
list(APPEND PBRT_HEADERS src/core/primitive.h)
list(APPEND PBRT_HEADERS src/core/progressreporter.h)
list(APPEND PBRT_HEADERS src/core/quaternion.h)
list(APPEND PBRT_HEADERS src/core/reflection.h)
list(APPEND PBRT_HEADERS src/core/rng.h)
list(APPEND PBRT_HEADERS src/core/sampler.h)
list(APPEND PBRT_HEADERS src/core/sampling.h)
list(APPEND PBRT_HEADERS src/core/scene.h)
list(APPEND PBRT_HEADERS src/core/shape.h)
list(APPEND PBRT_HEADERS src/core/sobolmatrices.h)
list(APPEND PBRT_HEADERS src/core/spectrum.h)
list(APPEND PBRT_HEADERS src/core/stats.h)
list(APPEND PBRT_HEADERS src/core/stringprint.h)
list(APPEND PBRT_HEADERS src/core/texture.h)
list(APPEND PBRT_HEADERS src/core/transform.h)
list(APPEND PBRT_HEADERS src/filters/box.h)
list(APPEND PBRT_HEADERS src/filters/gaussian.h)
list(APPEND PBRT_HEADERS src/filters/mitchell.h)
list(APPEND PBRT_HEADERS src/filters/sinc.h)
list(APPEND PBRT_HEADERS src/filters/triangle.h)
list(APPEND PBRT_HEADERS src/integrators/ao.h)
list(APPEND PBRT_HEADERS src/integrators/bdpt.h)
list(APPEND PBRT_HEADERS src/integrators/directlighting.h)
list(APPEND PBRT_HEADERS src/integrators/mlt.h)
list(APPEND PBRT_HEADERS src/integrators/path.h)
list(APPEND PBRT_HEADERS src/integrators/sppm.h)
list(APPEND PBRT_HEADERS src/integrators/volpath.h)
list(APPEND PBRT_HEADERS src/integrators/whitted.h)
list(APPEND PBRT_HEADERS src/lights/diffuse.h)
list(APPEND PBRT_HEADERS src/lights/distant.h)
list(APPEND PBRT_HEADERS src/lights/goniometric.h)
list(APPEND PBRT_HEADERS src/lights/infinite.h)
list(APPEND PBRT_HEADERS src/lights/point.h)
list(APPEND PBRT_HEADERS src/lights/projection.h)
list(APPEND PBRT_HEADERS src/lights/spot.h)
list(APPEND PBRT_HEADERS src/materials/disney.h)
list(APPEND PBRT_HEADERS src/materials/fourier.h)
list(APPEND PBRT_HEADERS src/materials/glass.h)
list(APPEND PBRT_HEADERS src/materials/hair.h)
list(APPEND PBRT_HEADERS src/materials/kdsubsurface.h)
list(APPEND PBRT_HEADERS src/materials/matte.h)
list(APPEND PBRT_HEADERS src/materials/metal.h)
list(APPEND PBRT_HEADERS src/materials/mirror.h)
list(APPEND PBRT_HEADERS src/materials/mixmat.h)
list(APPEND PBRT_HEADERS src/materials/plastic.h)
list(APPEND PBRT_HEADERS src/materials/substrate.h)
list(APPEND PBRT_HEADERS src/materials/subsurface.h)
list(APPEND PBRT_HEADERS src/materials/translucent.h)
list(APPEND PBRT_HEADERS src/materials/uber.h)
list(APPEND PBRT_HEADERS src/media/grid.h)
list(APPEND PBRT_HEADERS src/media/homogeneous.h)
list(APPEND PBRT_HEADERS src/samplers/halton.h)
list(APPEND PBRT_HEADERS src/samplers/maxmin.h)
list(APPEND PBRT_HEADERS src/samplers/random.h)
list(APPEND PBRT_HEADERS src/samplers/sobol.h)
list(APPEND PBRT_HEADERS src/samplers/stratified.h)
list(APPEND PBRT_HEADERS src/samplers/zerotwosequence.h)
list(APPEND PBRT_HEADERS src/shapes/cone.h)
list(APPEND PBRT_HEADERS src/shapes/curve.h)
list(APPEND PBRT_HEADERS src/shapes/cylinder.h)
list(APPEND PBRT_HEADERS src/shapes/disk.h)
list(APPEND PBRT_HEADERS src/shapes/heightfield.h)
list(APPEND PBRT_HEADERS src/shapes/hyperboloid.h)
list(APPEND PBRT_HEADERS src/shapes/loopsubdiv.h)
list(APPEND PBRT_HEADERS src/shapes/nurbs.h)
list(APPEND PBRT_HEADERS src/shapes/paraboloid.h)
list(APPEND PBRT_HEADERS src/shapes/sphere.h)
list(APPEND PBRT_HEADERS src/shapes/triangle.h)
list(APPEND PBRT_HEADERS src/textures/bilerp.h)
list(APPEND PBRT_HEADERS src/textures/checkerboard.h)
list(APPEND PBRT_HEADERS src/textures/constant.h)
list(APPEND PBRT_HEADERS src/textures/dots.h)
list(APPEND PBRT_HEADERS src/textures/fbm.h)
list(APPEND PBRT_HEADERS src/textures/imagemap.h)
list(APPEND PBRT_HEADERS src/textures/marble.h)
list(APPEND PBRT_HEADERS src/textures/mix.h)
list(APPEND PBRT_HEADERS src/textures/scale.h)
list(APPEND PBRT_HEADERS src/textures/uv.h)
list(APPEND PBRT_HEADERS src/textures/windy.h)
list(APPEND PBRT_HEADERS src/textures/wrinkled.h)

# SOURCES
list(APPEND PBRT_HEADERS src/accelerators/bvh.cpp)
list(APPEND PBRT_HEADERS src/accelerators/kdtreeaccel.cpp)
list(APPEND PBRT_HEADERS src/cameras/environment.cpp)
list(APPEND PBRT_HEADERS src/cameras/orthographic.cpp)
list(APPEND PBRT_HEADERS src/cameras/perspective.cpp)
list(APPEND PBRT_HEADERS src/cameras/realistic.cpp)
list(APPEND PBRT_HEADERS src/core/api.cpp)
list(APPEND PBRT_HEADERS src/core/bssrdf.cpp)
list(APPEND PBRT_HEADERS src/core/camera.cpp)
list(APPEND PBRT_HEADERS src/core/efloat.cpp)
list(APPEND PBRT_HEADERS src/core/error.cpp)
list(APPEND PBRT_HEADERS src/core/fileutil.cpp)
list(APPEND PBRT_HEADERS src/core/film.cpp)
list(APPEND PBRT_HEADERS src/core/filter.cpp)
list(APPEND PBRT_HEADERS src/core/floatfile.cpp)
list(APPEND PBRT_HEADERS src/core/geometry.cpp)
list(APPEND PBRT_HEADERS src/core/integrator.cpp)
list(APPEND PBRT_HEADERS src/core/interaction.cpp)
list(APPEND PBRT_HEADERS src/core/interpolation.cpp)
list(APPEND PBRT_HEADERS src/core/light.cpp)
list(APPEND PBRT_HEADERS src/core/lightdistrib.cpp)
list(APPEND PBRT_HEADERS src/core/lowdiscrepancy.cpp)
list(APPEND PBRT_HEADERS src/core/material.cpp)
list(APPEND PBRT_HEADERS src/core/medium.cpp)
list(APPEND PBRT_HEADERS src/core/memory.cpp)
list(APPEND PBRT_HEADERS src/core/microfacet.cpp)
list(APPEND PBRT_HEADERS src/core/parallel.cpp)
list(APPEND PBRT_HEADERS src/core/paramset.cpp)
list(APPEND PBRT_HEADERS src/core/parser.cpp)
list(APPEND PBRT_HEADERS src/core/primitive.cpp)
list(APPEND PBRT_HEADERS src/core/progressreporter.cpp)
list(APPEND PBRT_HEADERS src/core/quaternion.cpp)
list(APPEND PBRT_HEADERS src/core/reflection.cpp)
list(APPEND PBRT_HEADERS src/core/sampler.cpp)
list(APPEND PBRT_HEADERS src/core/sampling.cpp)
list(APPEND PBRT_HEADERS src/core/scene.cpp)
list(APPEND PBRT_HEADERS src/core/shape.cpp)
list(APPEND PBRT_HEADERS src/core/sobolmatrices.cpp)
list(APPEND PBRT_HEADERS src/core/spectrum.cpp)
list(APPEND PBRT_HEADERS src/core/stats.cpp)
list(APPEND PBRT_HEADERS src/core/texture.cpp)
list(APPEND PBRT_HEADERS src/core/transform.cpp)
list(APPEND PBRT_HEADERS src/filters/box.cpp)
list(APPEND PBRT_HEADERS src/filters/gaussian.cpp)
list(APPEND PBRT_HEADERS src/filters/mitchell.cpp)
list(APPEND PBRT_HEADERS src/filters/sinc.cpp)
list(APPEND PBRT_HEADERS src/filters/triangle.cpp)
list(APPEND PBRT_HEADERS src/integrators/ao.cpp)
list(APPEND PBRT_HEADERS src/integrators/bdpt.cpp)
list(APPEND PBRT_HEADERS src/integrators/directlighting.cpp)
list(APPEND PBRT_HEADERS src/integrators/mlt.cpp)
list(APPEND PBRT_HEADERS src/integrators/path.cpp)
list(APPEND PBRT_HEADERS src/integrators/sppm.cpp)
list(APPEND PBRT_HEADERS src/integrators/volpath.cpp)
list(APPEND PBRT_HEADERS src/integrators/whitted.cpp)
list(APPEND PBRT_HEADERS src/lights/diffuse.cpp)
list(APPEND PBRT_HEADERS src/lights/distant.cpp)
list(APPEND PBRT_HEADERS src/lights/goniometric.cpp)
list(APPEND PBRT_HEADERS src/lights/infinite.cpp)
list(APPEND PBRT_HEADERS src/lights/point.cpp)
list(APPEND PBRT_HEADERS src/lights/projection.cpp)
list(APPEND PBRT_HEADERS src/lights/spot.cpp)
list(APPEND PBRT_HEADERS src/materials/disney.cpp)
list(APPEND PBRT_HEADERS src/materials/fourier.cpp)
list(APPEND PBRT_HEADERS src/materials/glass.cpp)
list(APPEND PBRT_HEADERS src/materials/hair.cpp)
list(APPEND PBRT_HEADERS src/materials/kdsubsurface.cpp)
list(APPEND PBRT_HEADERS src/materials/matte.cpp)
list(APPEND PBRT_HEADERS src/materials/metal.cpp)
list(APPEND PBRT_HEADERS src/materials/mirror.cpp)
list(APPEND PBRT_HEADERS src/materials/mixmat.cpp)
list(APPEND PBRT_HEADERS src/materials/plastic.cpp)
list(APPEND PBRT_HEADERS src/materials/substrate.cpp)
list(APPEND PBRT_HEADERS src/materials/subsurface.cpp)
list(APPEND PBRT_HEADERS src/materials/translucent.cpp)
list(APPEND PBRT_HEADERS src/materials/uber.cpp)
list(APPEND PBRT_HEADERS src/media/grid.cpp)
list(APPEND PBRT_HEADERS src/media/homogeneous.cpp)
list(APPEND PBRT_HEADERS src/samplers/halton.cpp)
list(APPEND PBRT_HEADERS src/samplers/maxmin.cpp)
list(APPEND PBRT_HEADERS src/samplers/random.cpp)
list(APPEND PBRT_HEADERS src/samplers/sobol.cpp)
list(APPEND PBRT_HEADERS src/samplers/stratified.cpp)
list(APPEND PBRT_HEADERS src/samplers/zerotwosequence.cpp)
list(APPEND PBRT_HEADERS src/shapes/cone.cpp)
list(APPEND PBRT_HEADERS src/shapes/curve.cpp)
list(APPEND PBRT_HEADERS src/shapes/cylinder.cpp)
list(APPEND PBRT_HEADERS src/shapes/disk.cpp)
list(APPEND PBRT_HEADERS src/shapes/heightfield.cpp)
list(APPEND PBRT_HEADERS src/shapes/hyperboloid.cpp)
list(APPEND PBRT_HEADERS src/shapes/loopsubdiv.cpp)
list(APPEND PBRT_HEADERS src/shapes/nurbs.cpp)
list(APPEND PBRT_HEADERS src/shapes/paraboloid.cpp)
list(APPEND PBRT_HEADERS src/shapes/sphere.cpp)
list(APPEND PBRT_HEADERS src/shapes/triangle.cpp)
list(APPEND PBRT_HEADERS src/textures/bilerp.cpp)
list(APPEND PBRT_HEADERS src/textures/checkerboard.cpp)
list(APPEND PBRT_HEADERS src/textures/constant.cpp)
list(APPEND PBRT_HEADERS src/textures/dots.cpp)
list(APPEND PBRT_HEADERS src/textures/fbm.cpp)
list(APPEND PBRT_HEADERS src/textures/imagemap.cpp)
list(APPEND PBRT_HEADERS src/textures/marble.cpp)
list(APPEND PBRT_HEADERS src/textures/mix.cpp)
list(APPEND PBRT_HEADERS src/textures/scale.cpp)
list(APPEND PBRT_HEADERS src/textures/uv.cpp)
list(APPEND PBRT_HEADERS src/textures/windy.cpp)
list(APPEND PBRT_HEADERS src/textures/wrinkled.cpp)

# DEPENDENCY GLOG
set( WITH_GFLAGS OFF CACHE BOOL "Use gflags" )
set( BUILD_SHARED_LIBS OFF CACHE BOOL " " FORCE )
add_subdirectory( src/ext/glog )
include_directories (
  src/ext/glog/src
  ${PROJECT_BINARY_DIR}/src/ext/glog
)

# CREATE LIBRARY
add_library(pbrt STATIC ${PBRT_HEADERS} ${PBRT_SOURCES})

# SANITETIZE
add_sanitizers ( pbrt )

# ENABLED SPECIFIC C++11 FFEATURES
set ( PBRT_CXX11_FEATURES
  cxx_auto_type
  cxx_explicit_conversions
  cxx_lambdas
  cxx_nullptr
  cxx_range_for
  cxx_static_assert
)
target_compile_features ( pbrt PRIVATE ${PBRT_CXX11_FEATURES} )

# LIBRARY LINK
target_link_libraries(pbrt PUBLIC glog)

# LIBRARY INCLUDES
target_include_directories(
    pbrt PUBLIC
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/>
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/core>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

# DEVELOPER OPTIONS
option(PBRT_FLOAT_AS_DOUBLE "Use 64-bit floats" OFF)
if (PBRT_FLOAT_AS_DOUBLE)
  target_compile_definitions( pbrt PRIVATE -D PBRT_FLOAT_AS_DOUBLE )
endif()

option(PBRT_SAMPLED_SPECTRUM "Use SampledSpectrum rather than RGBSpectrum" OFF)
if (PBRT_SAMPLED_SPECTRUM)
  target_compile_definitions( pbrt PRIVATE -D PBRT_SAMPLED_SPECTRUM )
endif()

# HARDCODED DYNAMIC OPTIONS
include(PbrtAddDefinitions)

# INSTALLATION
install(
    TARGETS pbrt
    EXPORT pbrt-config
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/runtime
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

install(
    EXPORT pbrt-config
    DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake/pbrt)

install(
    DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/src/
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/pbrt
    FILES_MATCHING PATTERN "*.h")
